--- a/scss/partials/_landing.scss
+++ b/scss/partials/_landing.scss
@@ -18,6 +18,10 @@
 		@media screen and (min-width: 768px) {
 			width: 85%;
 		}
+
+		@media screen and (min-width: 1200px) {
+			width: 1110px;
+		}
 	}
 	&__copy-content {
 		padding: 2.5em 0;
@@ -37,6 +41,10 @@
 		line-height: 1.5;
 		color: #fff;
 		text-shadow: .5px 1.5px 2px rgba(#000, .2);
+
+		@media screen and (min-width: 1200px) {
+			font-size: 3.3em;
+		}
 	}
 	&__title-style {
 		font-size: 3.5em;
@@ -65,6 +73,11 @@
 		border: 1px solid rgba($color2, .15);
 		padding: 1em;
 		position: relative;
+
+		@media screen and (min-width: 1200px) {
+			width: 870px;
+			margin: 0 auto;
+		}
 	}
 	&__book-options {
 		display: flex;
