--- a/templates/index.pug
+++ b/templates/index.pug
@@ -412,7 +412,7 @@ html(lang="en")
 								h4.activities__card-title kids club
 								p.activities__card-text
 									|We've created the Rosarito Beach Hotel Kids Club to provide free activities for our younger guests during summer and holidays.
-								a.button__outline(href="#") see more
+								a.activities__button.button__outline(href="#") see more
 						article.activities__card
 							figure.activities__card-img-container
 								img.activities__card-img(src="./images/spa.jpg" alt="spa")
@@ -420,7 +420,7 @@ html(lang="en")
 								h4.activities__card-title spa
 								p.activities__card-text
 									|Swedish massage, aromatherapy, hydrotherapy and hot stones; and at much lower prices than less luxurious spas to the north.
-								a.button__outline(href="#") see more
+								a.activities__button.button__outline(href="#") see more
 						article.activities__card
 							figure.activities__card-img-container
 								img.activities__card-img(src="./images/art-gallery.jpg" alt="art-gallery")
@@ -428,7 +428,7 @@ html(lang="en")
 								h4.activities__card-title art galleries
 								p.activities__card-text
 									|Great art is everywhere and going gallery hopping is becoming one the most popular things for people to do in Rosarito.
-								a.button__outline(href="#") see more
+								a.activities__button.button__outline(href="#") see more
 						article.activities__card
 							figure.activities__card-img-container
 								img.activities__card-img(src="./images/special-tours.jpg" alt="special-tours")
@@ -436,7 +436,7 @@ html(lang="en")
 								h4.activities__card-title special tours
 								p.activities__card-text
 									|We're offering  tours to help you see the wonders of Baja.  From the wine country, to fishing, to the great golf of Mexico. Come to Rosarito Hotel!
-								a.button__outline(href="#") see more
+								a.activities__button.button__outline(href="#") see more
 						article.activities__card
 							figure.activities__card-img-container
 								img.activities__card-img(src="./images/whale-watching.jpg" alt="whale-watching")
@@ -444,7 +444,7 @@ html(lang="en")
 								h4.activities__card-title whale watching
 								p.activities__card-text
 									|The great annual grey whale migration is one of the most extraordinary migrations on the planet.
-								a.button__outline(href="#") see more
+								a.activities__button.button__outline(href="#") see more
 						article.activities__card
 							figure.activities__card-img-container
 								img.activities__card-img(src="./images/wine-tasting.jpg" alt="wine-tasting")
@@ -452,7 +452,7 @@ html(lang="en")
 								h4.activities__card-title wine tasting
 								p.activities__card-text
 									|Baja California Wine Country is blessed with some of the most ideal Mediterranean climate for grape growing.
-								a.button__outline(href="#") see more
+								a.activities__button.button__outline(href="#") see more
 						article.activities__card
 							figure.activities__card-img-container
 								img.activities__card-img(src="./images/baja-golf.jpg" alt="baja-golf")
@@ -460,7 +460,7 @@ html(lang="en")
 								h4.activities__card-title baja's golf
 								p.activities__card-text
 									|You can play canyon-style golf throughout rolling hills all the while enjoying the natural beauty of the Pacific Ocean.
-								a.button__outline(href="#") see more
+								a.activities__button.button__outline(href="#") see more
 						article.activities__card
 							figure.activities__card-img-container
 								img.activities__card-img(src="./images/surfing-lessons.jpg" alt="surfing-lessons")
@@ -468,7 +468,7 @@ html(lang="en")
 								h4.activities__card-title surfing lessons
 								p.activities__card-text
 									|Surf's Up! Look at a map of the Pacific Ocean and you will see that the peninsula of Baja California is a unique piece.
-								a.button__outline(href="#") see more
+								a.activities__button.button__outline(href="#") see more
 			section.event
 				div.event__container
 					header.event__header
@@ -509,7 +509,7 @@ html(lang="en")
 					header.contact__header
 						h2.contact__header-title contacts
 					div.contact__items-container
-						div.contact__item
+						div.contact__item-one
 							div.contact__element-container
 								h3.contact__item-title Location address
 								p.contact__item-text Boulevard Benito Juarez # 31. Rosarito, Baja California México
@@ -519,7 +519,7 @@ html(lang="en")
 							div.contact__element-container
 								h3.contact__item-title For all other inquiries
 								p.contact__item-text 011 [52] (661) 612-1111
-						div.contact__item
+						div.contact__item-two
 							div.contact__item
 								h3.contact__item-title Reservations only from the USA
 								p.contact__item-text
@@ -579,6 +579,6 @@ html(lang="en")
 						p.footer__copyright
 							|&#169;Rosarito Beach Hotel 2017
 						ul.footer__social-list
-							li.footer__social-item.footer__social-item-fb: a.button__line(href="#") facebook
-							li.footer__social-item: a.button__line(href="#") instagram
+							li.footer__social-item.footer__social-item-fb: a.footer__social-link.button__line(href="#") facebook
+							li.footer__social-item: a.footer__social-link.button__line(href="#") instagram
 		script(src="./js/scripts.js")
