--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,9 @@ label {
         display: flex;
         -ms-flex-pack: justify;
         justify-content: space-between; } }
+    @media screen and (min-width: 1200px) {
+      .header__container {
+        width: 1110px; } }
   .header__icons-container {
     display: -ms-flexbox;
     display: flex;
@@ -141,7 +144,7 @@ label {
     line-height: 4.5;
     border-bottom: 1px solid rgba(51, 51, 51, 0.2);
     transition: all 250ms ease-in; }
-    @media screen and (min-width: 1024px) {
+    @media screen and (max-width: 1023px) {
       .main-nav__link:hover {
         background-color: rgba(51, 51, 51, 0.1); } }
     @media screen and (min-width: 1024px) {
@@ -386,6 +389,9 @@ label {
     @media screen and (min-width: 768px) {
       .landing__container {
         width: 85%; } }
+    @media screen and (min-width: 1200px) {
+      .landing__container {
+        width: 1110px; } }
   .landing__copy-content {
     padding: 2.5em 0;
     text-align: center; }
@@ -402,6 +408,9 @@ label {
     line-height: 1.5;
     color: #fff;
     text-shadow: 0.5px 1.5px 2px rgba(0, 0, 0, 0.2); }
+    @media screen and (min-width: 1200px) {
+      .landing__title {
+        font-size: 3.3em; } }
   .landing__title-style {
     font-size: 3.5em; }
   @media screen and (max-width: 1023px) {
@@ -420,6 +429,10 @@ label {
     border: 1px solid rgba(51, 51, 51, 0.15);
     padding: 1em;
     position: relative; }
+    @media screen and (min-width: 1200px) {
+      .landing__book-container {
+        width: 870px;
+        margin: 0 auto; } }
   .landing__book-options {
     display: -ms-flexbox;
     display: flex;
@@ -550,7 +563,6 @@ label {
       color: rgba(51, 51, 51, 0.6); }
 
 .why {
-  background-color: #EAF0EC;
   padding: 5em 0 4em; }
   .why__container {
     width: 90%;
@@ -558,6 +570,9 @@ label {
     @media screen and (min-width: 768px) {
       .why__container {
         width: 85%; } }
+    @media screen and (min-width: 1200px) {
+      .why__container {
+        width: 1110px; } }
   .why__elements-container {
     position: relative; }
     @media screen and (min-width: 1024px) {
@@ -624,12 +639,18 @@ label {
     @media screen and (min-width: 1024px) {
       .experience__container {
         width: 60%; } }
+    @media screen and (min-width: 1200px) {
+      .experience__container {
+        width: 1110px; } }
   .experience__copy-container {
     text-align: center; }
     @media screen and (min-width: 640px) {
       .experience__copy-container {
         width: 80%;
         margin: 0 auto; } }
+    @media screen and (min-width: 1200px) {
+      .experience__copy-container {
+        width: 50%; } }
   .experience__header {
     padding-bottom: 1em;
     border-bottom: 2px solid #fff; }
@@ -665,6 +686,9 @@ label {
     @media screen and (min-width: 768px) {
       .room__container {
         width: 85%; } }
+    @media screen and (min-width: 1200px) {
+      .room__container {
+        width: 1110px; } }
   .room__header {
     text-align: center; }
   .room__header-title {
@@ -697,6 +721,10 @@ label {
         -ms-flex-wrap: wrap;
         flex-wrap: wrap;
         margin-bottom: 8em; } }
+    @media screen and (min-width: 1200px) {
+      .room__item {
+        -ms-flex-align: center;
+        align-items: center; } }
   .room__item--margin {
     margin-bottom: 0; }
   .room__item-room-one, .room__item-room-two, .room__item-room-three {
@@ -743,7 +771,8 @@ label {
     line-height: 1.6; }
     @media screen and (min-width: 1024px) {
       .room__item-text {
-        font-size: 1.1em; } }
+        font-size: 1.1em;
+        margin-bottom: 1.5em; } }
   @media screen and (min-width: 1024px) {
     .room__button {
       line-height: 2;
@@ -758,8 +787,15 @@ label {
     @media screen and (min-width: 768px) {
       .activities__container {
         width: 85%; } }
+    @media screen and (min-width: 1200px) {
+      .activities__container {
+        width: 1110px; } }
   .activities__header {
     text-align: center; }
+    @media screen and (min-width: 1200px) {
+      .activities__header {
+        width: 50%;
+        margin: 0 auto; } }
   .activities__header-title {
     font-family: "Lora", serif;
     font-weight: 700;
@@ -780,6 +816,10 @@ label {
         font-size: 1.5em; } }
   .activities__copy-container {
     text-align: center; }
+    @media screen and (min-width: 1200px) {
+      .activities__copy-container {
+        width: 80%;
+        margin: 0 auto; } }
   .activities__copy {
     font-size: 1.2em;
     font-weight: 300;
@@ -800,7 +840,7 @@ label {
         flex-wrap: wrap; } }
   .activities__card {
     background-color: #fafafa;
-    box-shadow: 0.5px 0.5px 2px 2px rgba(51, 51, 51, 0.1);
+    box-shadow: 0.5px 0.5px 2px 1px rgba(51, 51, 51, 0.1);
     margin-bottom: 2em;
     border-radius: 5px;
     text-align: center; }
@@ -810,6 +850,9 @@ label {
     @media screen and (min-width: 1024px) {
       .activities__card {
         width: 47%; } }
+    @media screen and (min-width: 1200px) {
+      .activities__card {
+        width: 22.5%; } }
   .activities__card-img-container {
     margin: 0;
     padding: 0; }
@@ -826,6 +869,14 @@ label {
   .activities__card-text {
     color: rgba(51, 51, 51, 0.7);
     line-height: 1.5; }
+    @media screen and (min-width: 1200px) {
+      .activities__card-text {
+        font-size: .9em;
+        line-height: 1.7; } }
+  @media screen and (min-width: 1200px) {
+    .activities__button {
+      font-size: 1em;
+      line-height: 2; } }
 
 .event {
   padding: 4em 0 6em; }
@@ -835,6 +886,9 @@ label {
     @media screen and (min-width: 768px) {
       .event__container {
         width: 85%; } }
+    @media screen and (min-width: 1200px) {
+      .event__container {
+        width: 1110px; } }
   .event__header {
     text-align: center; }
   .event__header-title {
@@ -876,6 +930,10 @@ label {
       .event__item-one, .event__item-two {
         width: 47%;
         height: 40em; } }
+    @media screen and (min-width: 1200px) {
+      .event__item-one, .event__item-two {
+        width: 48%;
+        height: 42em; } }
   .event__item-one {
     background-color: #EFEAE3;
     margin-bottom: 2em; }
@@ -894,6 +952,10 @@ label {
     font-size: 1.2em;
     font-weight: 300;
     line-height: 1.6; }
+    @media screen and (min-width: 1200px) {
+      .event__item-text {
+        font-size: 1.1em;
+        line-height: 1.8; } }
 
 .dining {
   padding: 6em 0 5em;
@@ -904,6 +966,9 @@ label {
     @media screen and (min-width: 768px) {
       .dining__container {
         width: 85%; } }
+    @media screen and (min-width: 1200px) {
+      .dining__container {
+        width: 1110px; } }
   @media screen and (min-width: 1024px) {
     .dining__items-container {
       display: -ms-flexbox;
@@ -948,6 +1013,9 @@ label {
     @media screen and (min-width: 768px) {
       .contact__container {
         width: 85%; } }
+    @media screen and (min-width: 1200px) {
+      .contact__container {
+        width: 1110px; } }
   .contact__header-title {
     font-family: "Lora", serif;
     font-weight: 700;
@@ -958,10 +1026,29 @@ label {
     margin-bottom: 0; }
   .contact__items-container {
     padding-top: 2em; }
-  .contact__item {
-    margin-bottom: 5em; }
+  @media screen and (min-width: 1024px) {
+    .contact__item-one {
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-pack: justify;
+      justify-content: space-between;
+      margin-bottom: 1em; } }
   .contact__element-container {
     margin-bottom: 3em; }
+    @media screen and (min-width: 1024px) {
+      .contact__element-container {
+        width: 30%; } }
+  @media screen and (min-width: 1024px) {
+    .contact__item-two {
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-pack: justify;
+      justify-content: space-between; } }
+  .contact__item {
+    margin-bottom: 5em; }
+    @media screen and (min-width: 1024px) {
+      .contact__item {
+        width: 45%; } }
   .contact__item-title {
     color: #333333;
     font-family: "Lora", serif;
@@ -978,11 +1065,17 @@ label {
       position: absolute;
       bottom: -.2em;
       left: 0; }
+    @media screen and (min-width: 1024px) {
+      .contact__item-title {
+        font-size: 1.3em; } }
   .contact__item-text {
     color: rgba(51, 51, 51, 0.7);
     font-size: 1.2em;
     font-weight: 300;
     line-height: 1.6; }
+    @media screen and (min-width: 1024px) {
+      .contact__item-text {
+        font-size: 1.05em; } }
 
 .footer {
   padding: 4em 0 1.5em;
@@ -993,6 +1086,9 @@ label {
     @media screen and (min-width: 768px) {
       .footer__container {
         width: 85%; } }
+    @media screen and (min-width: 1200px) {
+      .footer__container {
+        width: 1110px; } }
   .footer__items-container {
     display: -ms-flexbox;
     display: flex;
@@ -1001,6 +1097,9 @@ label {
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     margin-bottom: 3em; }
+    @media screen and (min-width: 1200px) {
+      .footer__items-container {
+        margin-bottom: 6em; } }
   .footer__item {
     margin-bottom: 2em;
     width: 48%; }
@@ -1054,9 +1153,15 @@ label {
     margin: 0;
     padding: 0;
     list-style: none; }
+    @media screen and (min-width: 1200px) {
+      .footer__social-list {
+        margin-top: 2em; } }
   @media screen and (min-width: 768px) {
     .footer__social-item {
       display: inline-block; } }
   @media screen and (min-width: 768px) {
     .footer__social-item-fb {
       margin-right: 2em; } }
+  @media screen and (min-width: 1024px) {
+    .footer__social-link {
+      font-size: 1em; } }
