--- a/scss/partials/_dining.scss
+++ b/scss/partials/_dining.scss
@@ -9,6 +9,10 @@
 		@media screen and (min-width: 768px) {
 			width: 85%;
 		}
+
+		@media screen and (min-width: 1200px) {
+			width: 1110px;
+		}
 	}
 	&__items-container {
 		
