--- a/scss/partials/_event.scss
+++ b/scss/partials/_event.scss
@@ -8,6 +8,10 @@
 		@media screen and (min-width: 768px) {
 			width: 85%;
 		}
+
+		@media screen and (min-width: 1200px) {
+			width: 1110px;
+		}
 	}
 	&__header {
 		text-align: center;
@@ -59,6 +63,11 @@
 			width: 47%;
 			height: 40em;
 		}
+
+		@media screen and (min-width: 1200px) {
+			width: 48%;
+			height: 42em;
+		}
 	}
 	&__item-one {
 		background-color: #EFEAE3;
@@ -88,6 +97,11 @@
 		font-size: 1.2em;
 		font-weight: $light;
 		line-height: 1.6;
+
+		@media screen and (min-width: 1200px) {
+			font-size: 1.1em;
+			line-height: 1.8;
+		}
 	}
 
 }
