--- a/scss/partials/_experience.scss
+++ b/scss/partials/_experience.scss
@@ -23,6 +23,10 @@
 		@media screen and (min-width: 1024px) {
 			width: 60%;
 		}
+
+		@media screen and (min-width: 1200px) {
+			width: 1110px;
+		}
 	}
 	&__copy-container {
 		text-align: center;
@@ -30,6 +34,10 @@
 		@media screen and (min-width: 640px) {
 			width: 80%;
 			margin: 0 auto;
+		}
+
+		@media screen and (min-width: 1200px) {
+			width: 50%;
 		}
 	}
 	&__header {
