--- a/scss/partials/_room.scss
+++ b/scss/partials/_room.scss
@@ -13,6 +13,10 @@
 		@media screen and (min-width: 768px) {
 			width: 85%;
 		}
+
+		@media screen and (min-width: 1200px) {
+			width: 1110px;
+		}
 	}
 	&__header {
 		text-align: center;
@@ -52,6 +56,10 @@
 			flex-wrap: wrap;
 
 			margin-bottom: 8em;
+		}
+
+		@media screen and (min-width: 1200px) {
+			align-items: center;
 		}
 	}
 	&__item--margin {
@@ -117,6 +125,7 @@
 
 		@media screen and (min-width: 1024px) {
 			font-size: 1.1em;
+			margin-bottom: 1.5em;
 		}
 	}
 	&__button {
